--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -4276,4 +4276,5 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .jovan {
   color: red;
-  font-size: 43px; }
+  font-size: 43px;
+  border: 1px solid red; }
