--- a/sass/bootstrap/_index.scss
+++ b/sass/bootstrap/_index.scss
@@ -40,7 +40,7 @@
 
 // Components w/ JavaScript
 //@import "modal";
-//@import "tooltip";
+@import "tooltip";
 //@import "popover";
 //@import "carousel";
 
