--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,3 @@
 @import "bootstrap/index";
 @import "font-awesome/index";
-.ste{
-  color:red;
-}
-.jovan{
-  color: red;
-  font-size: 43px;
-  border: 1px solid red;
-}
+@import "custom-vars";
