--- a/sass/bootstrap/_index.scss
+++ b/sass/bootstrap/_index.scss
@@ -29,7 +29,7 @@
 //@import "breadcrumb";
 //@import "pagination";
 //@import "badge";
-@import "jumbotron";
+//@import "jumbotron";
 //@import "alert";
 //@import "progress";
 //@import "media";
@@ -40,7 +40,7 @@
 
 // Components w/ JavaScript
 //@import "modal";
-//@import "tooltip";
+@import "tooltip";
 //@import "popover";
 //@import "carousel";
 
