--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,12 @@
+//including what i need from framework
 @import "bootstrap/index";
 @import "font-awesome/index";
+
+// ===== Overriding Bootstraps Variables ==== //
+$font-family-base: roboto-regular;
+
+
+//including custom files
+@import "custom-vars";
+@import "helpers";
+@import "typography";
