--- a/sass/bootstrap/_index.scss
+++ b/sass/bootstrap/_index.scss
@@ -21,8 +21,8 @@
 // Components
 @import "transitions";
 @import "dropdown";
-//@import "button-group";
-//@import "input-group";
+@import "button-group";
+@import "input-group";
 @import "nav";
 @import "navbar";
 //@import "card";
@@ -35,14 +35,14 @@
 //@import "media";
 //@import "list-group";
 //@import "responsive-embed";
-//@import "close";
+@import "close";
 
 
 // Components w/ JavaScript
-//@import "modal";
+@import "modal";
 @import "tooltip";
-//@import "popover";
-//@import "carousel";
+@import "popover";
+@import "carousel";
 
 // Utility classes
 @import "utilities";
