--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -119,10 +119,10 @@ blockquote {
   margin: 0 0 1rem; }
 
 a {
-  color: #110c11;
+  color: #72747a;
   text-decoration: none; }
   a:focus, a:hover {
-    color: black;
+    color: #4d4e52;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -1259,7 +1259,7 @@ mark,
   .form-control:focus {
     color: #464a4c;
     background-color: #fff;
-    border-color: #5c415c;
+    border-color: #b3b5b8;
     outline: none; }
   .form-control::placeholder {
     color: #636c72;
@@ -1513,7 +1513,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 2px rgba(17, 12, 17, 0.25); }
+    box-shadow: 0 0 0 2px rgba(114, 116, 122, 0.25); }
   .btn.disabled, .btn:disabled {
     cursor: not-allowed;
     opacity: .65; }
@@ -1526,23 +1526,23 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #110c11;
-  border-color: #110c11; }
+  background-color: #72747a;
+  border-color: #72747a; }
   .btn-primary:hover {
     color: #fff;
-    background-color: black;
-    border-color: black; }
+    background-color: #595b60;
+    border-color: #54565a; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 2px rgba(17, 12, 17, 0.5); }
+    box-shadow: 0 0 0 2px rgba(114, 116, 122, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
-    background-color: #110c11;
-    border-color: #110c11; }
+    background-color: #72747a;
+    border-color: #72747a; }
   .btn-primary:active, .btn-primary.active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: black;
+    background-color: #595b60;
     background-image: none;
-    border-color: black; }
+    border-color: #54565a; }
 
 .btn-secondary {
   color: #292b2c;
@@ -1645,24 +1645,24 @@ fieldset[disabled] a.btn {
     border-color: #c12e2a; }
 
 .btn-outline-primary {
-  color: #110c11;
+  color: #72747a;
   background-image: none;
   background-color: transparent;
-  border-color: #110c11; }
+  border-color: #72747a; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #110c11;
-    border-color: #110c11; }
+    background-color: #72747a;
+    border-color: #72747a; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 2px rgba(17, 12, 17, 0.5); }
+    box-shadow: 0 0 0 2px rgba(114, 116, 122, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #110c11;
+    color: #72747a;
     background-color: transparent; }
   .btn-outline-primary:active, .btn-outline-primary.active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #110c11;
-    border-color: #110c11; }
+    background-color: #72747a;
+    border-color: #72747a; }
 
 .btn-outline-secondary {
   color: #ccc;
@@ -1766,7 +1766,7 @@ fieldset[disabled] a.btn {
 
 .btn-link {
   font-weight: normal;
-  color: #110c11;
+  color: #72747a;
   border-radius: 0; }
   .btn-link, .btn-link:active, .btn-link.active, .btn-link:disabled {
     background-color: transparent; }
@@ -1775,7 +1775,7 @@ fieldset[disabled] a.btn {
   .btn-link:hover {
     border-color: transparent; }
   .btn-link:focus, .btn-link:hover {
-    color: black;
+    color: #4d4e52;
     text-decoration: underline;
     background-color: transparent; }
   .btn-link:disabled {
@@ -1893,7 +1893,7 @@ tbody.collapse.show {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #110c11; }
+    background-color: #72747a; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #636c72;
     cursor: not-allowed;
@@ -2212,7 +2212,7 @@ tbody.collapse.show {
 .nav-pills .nav-item.show .nav-link {
   color: #fff;
   cursor: default;
-  background-color: #110c11; }
+  background-color: #72747a; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -2538,7 +2538,7 @@ button.close {
   position: relative;
   display: flex;
   flex-direction: column;
-  background-color: #fff;
+  background-color: #f9fafa;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
@@ -2970,10 +2970,10 @@ button.close {
   background-color: #f7f7f7; }
 
 .bg-primary {
-  background-color: #110c11 !important; }
+  background-color: #72747a !important; }
 
 a.bg-primary:focus, a.bg-primary:hover {
-  background-color: black !important; }
+  background-color: #595b60 !important; }
 
 .bg-success {
   background-color: #5cb85c !important; }
@@ -4833,10 +4833,10 @@ a.text-muted:focus, a.text-muted:hover {
   color: #4b5257 !important; }
 
 .text-primary {
-  color: #110c11 !important; }
+  color: #72747a !important; }
 
 a.text-primary:focus, a.text-primary:hover {
-  color: black !important; }
+  color: #595b60 !important; }
 
 .text-success {
   color: #5cb85c !important; }
@@ -5017,7 +5017,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 body {
   font-family: roboto-regular;
-  background-color: #ededed; }
+  background-color: #dde2e3; }
 
 .btn {
   cursor: pointer; }
