--- a/sass/_custom-vars.scss
+++ b/sass/_custom-vars.scss
@@ -19,6 +19,9 @@ $roboto-font-map: (
 //including our custome fonts..
 @include RobotoFont();
 
-$os-base-color: #7a7a7a;
-$os-background-color: #ededed;
-$os-button-primarty-color: #110c11;
+$os-base-color: #72747a;
+$os-base-color-light: #9d9c9a;
+$os-base-color-lighter: #dde2e3;
+
+$os-secondary-color:#d1d9dc;
+$os-secondary-color-darker: #c4d0d9;
