--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 $font-family-base: roboto-regular!default;
 $brand-primary: $os-base-color;
 $modal-content-bg: lighten($os-base-color-lighter,10%);
+$body-color: $os-base-color-light;
 
 //including what i need from framework
 @import "bootstrap/index";
@@ -14,3 +15,4 @@ $modal-content-bg: lighten($os-base-color-lighter,10%);
 @import "helpers";
 @import "typography";
 @import "buttons-override";
+@import "reboot-override";
