--- a/sass/_custom-vars.scss
+++ b/sass/_custom-vars.scss
@@ -25,3 +25,5 @@ $os-base-color-lighter: #dde2e3;
 
 $os-secondary-color:#d1d9dc;
 $os-secondary-color-darker: #c4d0d9;
+
+$os-navbar-bg-color: #101010;
