--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,7 @@ $body-color: $os-base-color-light;
 //including helpers
 @import "helpers";
 @import "typography";
-@import "buttons-override";
 @import "reboot-override";
+@import "buttons-override";
+@import "nav-overrides";
+
