--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -8,3 +8,9 @@
 		}
 	}
 }
+@font-face {
+	font-family: oswald;
+	src:url('../fonts/Oswald-Bold.ttf');
+	font-style:normal;
+	font-weight:normal;
+}
