--- a/sass/_nav-overrides.scss
+++ b/sass/_nav-overrides.scss
@@ -1,5 +1,18 @@
 .navbar,
-.navbar-nav {
+.navbar-nav{
   flex-direction: row;
-  background-color: $os-navbar-bg-color;
+  align-items: center;
+}
+
+.navbar-dark {
+  background-color: $os-navbar-dark-bg-color;
+}
+
+.navbar-brand {
+  font-size: $os-font-size-XXXL;
+  font-family:oswald;
+
+  span{
+    font-size: 16px;
+  }
 }
