--- a/sass/bootstrap/_index.scss
+++ b/sass/bootstrap/_index.scss
@@ -6,7 +6,7 @@
 
 
 // Reset and dependencies
-@import "normalize";
+@import "reset";
 //@import "print";
 
 // Core CSS
@@ -39,10 +39,11 @@
 
 
 // Components w/ JavaScript
-@import "modal";
-@import "tooltip";
-@import "popover";
-@import "carousel";
+//@import "modal";
+//@import "tooltip";
+//@import "popover";
+//@import "carousel";
+
 
 // Utility classes
 @import "utilities";
