--- a/sass/font-awesome/_custom-styles.scss
+++ b/sass/font-awesome/_custom-styles.scss
@@ -1,3 +1,3 @@
 .#{$fa-css-prefix} {
-  font-size: $os-font-icons-default-size; // can't have font-size inherit on line above, so need to override
+  font-size: $os-font-icons-default-size;
 }
