--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -8312,6 +8312,22 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #ddd !important;
   }
 }
+body,
+html {
+  height: 100%;
+  color: #dde2e3;
+}
+
+.os-wrapper {
+  background-color: #dde2e3;
+  background-repeat: no-repeat;
+  background-image: url("../img/cover-ring.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100%;
+  position: relative;
+}
+
 body {
   font-family: roboto-regular;
 }
