--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -45,3 +45,6 @@ $os-animation-duration : 0.25s;
 
 //px to em config
 $browser-context: $os-font-size-regular;
+
+//body colors
+$os-body-bg-color: $os-base-color;
