--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -1,10 +1,13 @@
 @charset "UTF-8";
-/*
+/***********************************************
   Importing custom vars
-*/
-/*
+***********************************************/
+/***********************************************
   Overriding bootstrap components
-*/
+***********************************************/
+/***********************************************
+  Importing custom stuffs
+***********************************************/
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -135,13 +138,13 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: roboto-regular, sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
+  line-height: 1;
+  color: #dde2e3;
   text-align: left;
-  background-color: #fff;
+  background-color: #72747a;
 }
 
 [tabindex="-1"]:focus {
@@ -553,7 +556,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: #72747a;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1605,7 +1608,7 @@ pre code {
   border-top: 2px solid #dee2e6;
 }
 .table .table {
-  background-color: #fff;
+  background-color: #72747a;
 }
 
 .table-sm th,
@@ -1760,7 +1763,7 @@ pre code {
 }
 
 .table .thead-dark th {
-  color: #fff;
+  color: #72747a;
   background-color: #212529;
   border-color: #32383e;
 }
@@ -1771,7 +1774,7 @@ pre code {
 }
 
 .table-dark {
-  color: #fff;
+  color: #72747a;
   background-color: #212529;
 }
 .table-dark th,
@@ -1853,7 +1856,7 @@ pre code {
   width: 100%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
@@ -1882,7 +1885,7 @@ pre code {
 }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.25rem + 2px);
+  height: calc(1.75rem + 2px);
 }
 select.form-control:focus::-ms-value {
   color: #495057;
@@ -1900,7 +1903,7 @@ select.form-control:focus::-ms-value {
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
-  line-height: 1.5;
+  line-height: 1;
 }
 
 .col-form-label-lg {
@@ -1923,7 +1926,7 @@ select.form-control:focus::-ms-value {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   margin-bottom: 0;
-  line-height: 1.5;
+  line-height: 1;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2101,7 +2104,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   background-color: #34ce57;
 }
 .was-validated .custom-control-input:valid:focus ~ .custom-control-label::before, .custom-control-input.is-valid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
+  box-shadow: 0 0 0 1px #72747a, 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
@@ -2188,7 +2191,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   background-color: #e4606d;
 }
 .was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before, .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+  box-shadow: 0 0 0 1px #72747a, 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
 
 .was-validated .custom-file-input:invalid ~ .custom-file-label, .custom-file-input.is-invalid ~ .custom-file-label {
@@ -2271,7 +2274,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -2839,7 +2842,7 @@ tbody.collapse.show {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529;
+  color: #dde2e3;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3172,7 +3175,7 @@ tbody.collapse.show {
   margin-bottom: 0;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1;
   color: #495057;
   text-align: center;
   white-space: nowrap;
@@ -3208,7 +3211,7 @@ tbody.collapse.show {
 .custom-control {
   position: relative;
   display: block;
-  min-height: 1.5rem;
+  min-height: 1rem;
   padding-left: 1.5rem;
 }
 
@@ -3227,7 +3230,7 @@ tbody.collapse.show {
   background-color: #007bff;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 1px #72747a, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 .custom-control-input:active ~ .custom-control-label::before {
   color: #fff;
@@ -3245,7 +3248,7 @@ tbody.collapse.show {
 }
 .custom-control-label::before {
   position: absolute;
-  top: 0.25rem;
+  top: 0rem;
   left: 0;
   display: block;
   width: 1rem;
@@ -3257,7 +3260,7 @@ tbody.collapse.show {
 }
 .custom-control-label::after {
   position: absolute;
-  top: 0.25rem;
+  top: 0rem;
   left: 0;
   display: block;
   width: 1rem;
@@ -3306,9 +3309,9 @@ tbody.collapse.show {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(1.75rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
-  line-height: 1.5;
+  line-height: 1;
   color: #495057;
   vertical-align: middle;
   background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
@@ -3357,7 +3360,7 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(1.75rem + 2px);
   margin-bottom: 0;
 }
 
@@ -3365,7 +3368,7 @@ tbody.collapse.show {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(1.75rem + 2px);
   margin: 0;
   opacity: 0;
 }
@@ -3386,9 +3389,9 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.25rem + 2px);
+  height: calc(1.75rem + 2px);
   padding: 0.375rem 0.75rem;
-  line-height: 1.5;
+  line-height: 1;
   color: #495057;
   background-color: #fff;
   border: 1px solid #ced4da;
@@ -3401,9 +3404,9 @@ tbody.collapse.show {
   bottom: 0;
   z-index: 3;
   display: block;
-  height: calc(calc(2.25rem + 2px) - 1px * 2);
+  height: calc(calc(1.75rem + 2px) - 1px * 2);
   padding: 0.375rem 0.75rem;
-  line-height: 1.5;
+  line-height: 1;
   color: #495057;
   content: "Browse";
   background-color: #e9ecef;
@@ -3452,8 +3455,8 @@ tbody.collapse.show {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
+  background-color: #72747a;
+  border-color: #dee2e6 #dee2e6 #72747a;
 }
 .nav-tabs .dropdown-menu {
   margin-top: -1px;
@@ -3506,8 +3509,8 @@ tbody.collapse.show {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
@@ -4486,7 +4489,7 @@ tbody.collapse.show {
   background-color: #f8f9fa;
 }
 .list-group-item-action:active {
-  color: #212529;
+  color: #dde2e3;
   background-color: #e9ecef;
 }
 
@@ -4756,7 +4759,7 @@ button.close {
 
 .modal-title {
   margin-bottom: 0;
-  line-height: 1.5;
+  line-height: 1;
 }
 
 .modal-body {
@@ -4811,10 +4814,10 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: roboto-regular, sans-serif;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1;
   text-align: left;
   text-align: start;
   text-decoration: none;
@@ -4913,10 +4916,10 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: roboto-regular, sans-serif;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1;
   text-align: left;
   text-align: start;
   text-decoration: none;
@@ -5061,7 +5064,7 @@ button.close {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529;
+  color: #dde2e3;
 }
 
 .carousel {
