--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,10 @@
 /// === font variables === ///
 $font-family-base: roboto-regular, sans-serif;
 $line-height-base: 1;
+
+/// === headings variables === ///
+$headings-margin-bottom: 0;
+
 /// === body color var === ///
 $body-color: $os-base-color-lighter;
 $body-bg: $os-body-bg-color;
