--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -33,12 +33,12 @@ $os-secondary-color-darker: #c4d0d9;
 $os-navbar-dark-bg-color: #101010;
 
 //font sizes
-$os-font-size-XXXL: 36px;
-$os-font-size-regular: 16px;
-$os-font-size-small: 12px;
+$os-font-size-large: 2.25rem;
+$os-font-size-regular: 1rem;
+$os-font-size-small: 0.75rem;
 
 //icon size
-$os-font-icons-default-size: 20px;
+$os-font-icons-default-size: 1.25rem;
 
 //animation
 $os-animation-duration : 0.25s;
