--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 /// === font variables === ///
 $font-family-base: roboto-regular, sans-serif;
 $line-height-base: 1;
+$font-size-lg: $os-font-size-large;
 
 /// === headings variables === ///
 $headings-margin-bottom: 0;
@@ -19,12 +20,11 @@ $headings-margin-bottom: 0;
 $body-color: $os-base-color-lighter;
 $body-bg: $os-body-bg-color;
 
-
 /***********************************************
   Importing custom stuffs
 ***********************************************/
 @import "font-awesome/index";
 @import "bootstrap/index";
 @import "base";
-@import "typography";
 @import "mixins";
+@import "nav-override";
