--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -6162,6 +6162,9 @@ body {
   font-style: normal;
   font-weight: normal; }
 
+.navbar-dark .navbar-brand {
+  color: inherit; }
+
 .navbar-brand.btn {
   padding: 0; }
 
@@ -6172,3 +6175,8 @@ body {
   background-color: #72747a; }
   .os-btn:hover {
     background-color: #9d9c9a; }
+
+.os-btn-plain {
+  color: inherit; }
+  .os-btn-plain:hover {
+    color: #9d9c9a !important; }
