--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -6162,6 +6162,9 @@ body {
   font-style: normal;
   font-weight: normal; }
 
+.btn:focus {
+  box-shadow: none; }
+
 .navbar-dark .navbar-brand {
   color: inherit; }
 
