adding showcase animationdasddasadasdass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,10 @@
 $font-family-base: roboto-regular, sans-serif;
 $line-height-base: 1;
 $font-size-lg: $os-font-size-large;
-
+/// === typo wars === ///
+$headings-margin-bottom:0;
+$paragraph-margin-bottom:0;
+$headings-line-height:1;
 /// === headings variables === ///
 $headings-margin-bottom: 0;
 
