--- a/dev-css/main.css
+++ b/dev-css/main.css
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 0; }
 
 abbr[title],
 abbr[data-original-title] {
@@ -361,7 +361,7 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0;
   font-family: inherit;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1;
   color: inherit; }
 
 h1, .h1 {
@@ -389,22 +389,22 @@ h6, .h6 {
 .display-1 {
   font-size: 6rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1; }
 
 .display-2 {
   font-size: 5.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1; }
 
 .display-3 {
   font-size: 4.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1; }
 
 .display-4 {
   font-size: 3.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1; }
 
 hr {
   margin-top: 1rem;
@@ -6187,20 +6187,24 @@ body {
 
 @keyframes slidingDivUpOnPageLoad {
   0% {
-    bottom: 20px; }
+    bottom: -300px; }
   100% {
-    bottom: 550px; } }
+    bottom: 400px; } }
 
-.hiddenDiv {
+.showcase {
   position: absolute;
   visibility: hidden;
-  bottom: 20px;
-  transition: all 3s ease-in-out;
+  bottom: -300px;
+  transition: all 0.8s ease-in-out 0.2s;
   text-align: center;
   padding: 70px;
   background-color: rgba(10, 10, 40, 0.4);
-  left: calc(50% - 570px); }
+  left: calc(50% - 570px);
+  width: 100%;
+  max-width: 1140px;
+  transform: scale(0.5); }
 
 .showDiv {
   visibility: visible;
-  animation: slidingDivUpOnPageLoad 3s 0.5s forwards; }
+  transform: scale(1);
+  animation: slidingDivUpOnPageLoad 0.8s 0.2s forwards; }
