--- a/sass/_slidingDiv.scss
+++ b/sass/_slidingDiv.scss
@@ -1,23 +1,25 @@
 @keyframes slidingDivUpOnPageLoad {
-	0% 		{bottom: 20px;}
-	100% 	{bottom: 550px}
+	0% 		{bottom: -300px;}
+	100% 	{bottom: 400px}
 }
 
-.hiddenDiv {
+.showcase {
 	position: absolute;
 	visibility: hidden;
-	bottom: 20px;
-	transition: all 3s ease-in-out;
+	bottom:-300px;
+	transition: all 0.8s ease-in-out 0.2s;
 	text-align: center;
 	padding: 70px;
 	background-color: rgba(10, 10, 40, 0.4);
 	left: calc(50% - 570px);
 	width:100%;
-	max-width: 500px;
+	max-width: 1140px;
+	transform: scale(0.5);
 }
 
 .showDiv {
 	visibility:  visible;
-	animation: slidingDivUpOnPageLoad 3s 0.5s forwards;
+	transform: scale(1);
+	animation: slidingDivUpOnPageLoad 0.8s 0.2s forwards;
 
 }
